--- a/index.html
+++ b/index.html
@@ -1,74 +1,92 @@
 <!DOCTYPE html>
 <html>
+	<head>
+	<title>Sawyer's FIFA World Cup Website</title>
+	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	</head>
+	<body>
+		<h1>Sawyer's World Cup Page</h1>
+		<ul>
+		      <a href="#"<li>About Me</li></a>
+		      <a href="#"<li>Homepage</li></a>
+		      <a href="#"<li>Euros</li></a>
+	               </ul>
+		<h2>TOP GOAL SCORER</h2>
+                                <h2>Thomas Muller
+		<img src="http://www.laststicker.com/i/cards/1498/505.jpg"/>
+		<h2>Arjen Robben
+		<img src="http://www.laststicker.com/i/cards/1498/140.jpg"/>
+		<h2>Robin Van Persie
+		<img src="http://www.laststicker.com/i/cards/1498/145.jpg"/>
+		<h2>3 GOALS</h3>
+		<h2>MOST CLEAN SHEETS</h2>
+		<ul>
+			<li>
+                                                <img src="http://thumbs3.ebaystatic.com/d/l225/m/m5O3lMv5QBNLwQRM_iTXoIw.jpg"/>
+			<h2>Guillermo Ochoa</h2></li>
+			<li><img src="http://www.laststicker.com/i/cards/1498/186.jpg"/>
+			<h2>David Ospina</h2></li>
+			<li><img src="http://www.laststicker.com/i/cards/1498/376.jpg"/>
+			<h2>Hugo Lloris</h2></li>
+			<li><img src="http://www.laststicker.com/i/cards/1498/490.jpg"/>
+			<h2>Manuel Neuer</h2></li>
+			<li><h2>ALIREZA HAGHIGH (Couldn't find picture)</h2></li>
+			<li><img src="http://www.laststicker.com/i/cards/1498/471.jpg"/>
+			<h2>Vincent Enyeama</h2></li>
+		</ul>
+		
+		<h2>GROUPS</h2>
+		
+		<h3>GROUP A</h3>		
+		<h4>BRAZIL  4 POINTS</h4>
+		<h4>MEXICO 4 POINTS</h4>
+		<h4>CROATIA 3 POINTS</h4>
+		<h4>CAMEROON OUT 0 POINTS</h4>
+		
+		<h3>GROUP B</h3>
+		<h4>NETHERLANDS ADVANCED 6 POINTS</h4>
+		<h4>CHILE ADVANCED 6 POINTS</h4>
+		<h4>AUSTRALIA OUT 0 POINTS</h4>
+		<h4>SPAIN OUT 0 POINTS</h4>
+		
+		<h2>GROUP C</h2>
+		<h3>COLOMBIA 3 POINTS</h3>
+		<h3>IVORY COAST 3 POINTS</h3>
+		<h3>JAPAN 0 POINTS</h3>
+		<h3>GREECE 0 POINTS</h3>
+		
+		<h3>GROUP D</h3>
+		<h4>COSTA RICA 3 POINTS</h4>
+	    	<h4>ITALY 3 POINTS</h4>
+		<h4>ENGLAND 0 POINTS</h4>
+		<h4>URUGUAY 0 POINTS</h4>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Clarksvillesoccerclub5.github.io : " />
+		<h3>GROUP E</h3>
+		<h4>FRANCE 3 POINTS</h4>
+    		<h4>SWITZERLAND 3 POINTS</h4>
+		<h4>ECUADOR 0 POINTS</h4>
+		<h4>HONDURAS 0 POINTS</h4>
+			
+		<h3>GROUP F</h3>
+		<h4>ARGENTINA 3 POINTS</h4>
+		<h4>IRAN 1 POINT</h4>
+		<h4>NIGERIA 1 POINT</h4>
+		<h4>BOSINA AND HERZEGOVINA 0 POINTS</h4>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+		<h3>GROUP G</h3>
+		<h4>GERMANY 3 POINTS<h4>
+		<h4>USA 3 POINTS</h4>
+		<h4>GHANA 0 POINTS</h4>
+		<h4>PORTUGAL 0 POINTS</h4>
 
-    <title>Clarksvillesoccerclub5.github.io</title>
-  </head>
+		<h3>GROUP H</h3>
+		<h4>BELGIUM 3 POINTS</h4>
+		<h4>KOREA REPUBLIC 1 POINT</h4>
+		<h4>RUSSIA 1 POINT</h4>
+		<h4>ALGERIA 0 POINTS</h4>
 
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ClarksvilleSoccerClub5">View on GitHub</a>
-
-          <h1 id="project_title">Clarksvillesoccerclub5.github.io</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+				
+		<p>information from <a href="http://www.fifa.com/">FIFA OFFICIAL WEBSITE</a>
+	</body>
 </html>
+	
