--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>Sawyer's FIFA World Cup Website</title>
-	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	<link type="text/css" rel="stylesheet" href="stylesheets/stylesheet.css"/>
 	</head>
 	<body>
 		<h1>Sawyer's World Cup Page</h1>
